@@ -1047,7 +1047,7 @@ static void _preempt_jobs(List preemptee_job_list, int *error_code)
 			job_cnt++;
 		} else if (mode == PREEMPT_MODE_REQUEUE) {
 			rc = job_requeue(0, job_ptr->job_id, -1,
-					 (uint16_t)NO_VAL);
+					 (uint16_t)NO_VAL, true);
 			if (rc == SLURM_SUCCESS) {
 				info("preempted job %u has been requeued",
 				     job_ptr->job_id);
