@@ -3,7 +3,8 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 2.3.0.pre2
 =============================
- -- Log a job cancellation due to preemption to that job's stderr.
+ -- Log a job's requeue or cancellation due to preemption to that job's stderr:
+    "*** JOB 65547 CANCELLED AT 2011-01-21T12:59:33 DUE TO PREEMPTION ***".
 
 * Changes in SLURM 2.3.0.pre1
 =============================
